Add link to distribution

--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -205,7 +205,8 @@ the distribution), so most users do not need to compile it themselves.
 
 <p>
 There are two ways to obtain the source code.
-Source code is provided in the distribution.
+Source code is provided in the
+<a href="https://github.com/typetools/annotation-tools/releases">distribution</a>.
 Alternately, see the source code repository at
 <a href="https://github.com/typetools/annotation-tools">https://github.com/typetools/annotation-tools</a>.
 </p>
