--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -14,6 +14,11 @@ This is the changelog for the
 
 <ul>
   <li>
+    Version 3.6.26 (released Apr 1, 2016):
+    <ul>
+        <li>Closes issues <a href="https://github.com/typetools/annotation-tools/issues/70">#70</a> and <a href="https://github.com/typetools/annotation-tools/issues/88">#88</a></li>
+    </ul>
+  <li>
     Version 3.6.26 (released Mar 1, 2016):
     <ul>
         <li>Avoids reinserting an annotation that already exists in comments, fixing Issue
