--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -16,7 +16,16 @@ This is the changelog for the
   <li>
     Version 3.6.26 (released Apr 1, 2016):
     <ul>
-        <li>Closes issues <a href="https://github.com/typetools/annotation-tools/issues/70">#70</a> and <a href="https://github.com/typetools/annotation-tools/issues/88">#88</a></li>
+      <li>
+	The annotation file format permits use of a class name, in addition to
+	<code>&lt;init&gt;</code>, to specify a constructor.
+      </li>
+      <li>
+	Closes issues
+	<a href="https://github.com/typetools/annotation-tools/issues/70">#70</a>
+	and
+	<a href="https://github.com/typetools/annotation-tools/issues/88">#88</a>.
+      </li>
     </ul>
   <li>
     Version 3.6.26 (released Mar 1, 2016):
