updated for release

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,15 @@ This is the changelog for the
 
 <ul>
   <li>
+    Version 3.6.28 (released May 1, 2016):
+    <ul>
+      <li>
+	<code>AScene</code> now has a copy constructor and implements
+	<code>Cloneable</code>.
+      </li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.27 (released Apr 1, 2016):
     <ul>
       <li>
@@ -26,6 +35,7 @@ This is the changelog for the
 	<a href="https://github.com/typetools/annotation-tools/issues/88">#88</a>.
       </li>
     </ul>
+  </li>
   <li>
     Version 3.6.26 (released Mar 1, 2016):
     <ul>
