changelog update for 3.6.29

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,13 @@ This is the changelog for the
 
 <ul>
   <li>
+    Version 3.6.29 (released Jun 1, 2016):
+    <ul>
+      <li>
+        Fixes Issue
+        <a href="https://github.com/typetools/annotation-tools/issues/117">#117</a>: extract-annotations puts package annotations on non-existent class.
+      </li>
+    </ul>
     Version 3.6.28 (released May 1, 2016):
     <ul>
       <li>
