--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -16,8 +16,11 @@ This is the changelog for the
     Version 3.6.29 (released Jun 1, 2016):
     <ul>
       <li>
-        Fixes Issue
-        <a href="https://github.com/typetools/annotation-tools/issues/117">#117</a>: extract-annotations puts package annotations on non-existent class.
+        extract-annotations no longer puts package annotations on non-existent class,
+        fixing Issue <a href="https://github.com/typetools/annotation-tools/issues/117">#117</a>.
+      </li>
+      <li>
+        Closes issue <a href="https://github.com/typetools/annotation-tools/issues/120">#120</a>.
       </li>
     </ul>
     Version 3.6.28 (released May 1, 2016):
