--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -12,6 +12,12 @@ This is the changelog for the
 </p>
 
 <ul>
+    <li>
+    Version 3.6.32 (released Sep 1, 2016):
+    <ul>
+        <li>Minor bug fixes and improvements.</li>
+    </ul>
+  </li>
   <li>
     Version 3.6.31 (released August 1, 2016):
     <ul>
