--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -113,7 +113,7 @@ A diagram showing the interactions betweeen these tools is below.
 </p>
 
 <div>
-<img src="figures/tool-relations.png" alt="Relationships between AFU tools" />
+<img src="figures/tool-relations.svg" alt="Relationships between AFU tools" />
 </div>
 
 <p>
@@ -467,7 +467,7 @@ has a number of methods (<code>AMethod</code>), fields
 related in the type hierarchy shown below.</p>
 
 <div>
-<img src="scene-lib-type-hierarchy.png" alt="scene-lib type hierarchy">
+<img src="figures/scene-lib-type-hierarchy.svg" alt="scene-lib type hierarchy">
 </div>
 
 <p>Each class in the type hierarchy has one or more fields to hold
