--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,12 @@ This is the changelog for the
 
 <ul>
     <li>
+    Version 3.6.33 (released Sep 16, 2016):
+    <ul>
+        <li>Minor bug fixes and improvements.</li>
+    </ul>
+  </li>
+    <li>
     Version 3.6.32 (released Sep 1, 2016):
     <ul>
         <li>Minor bug fixes and improvements.</li>
