--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,12 @@ This is the changelog for the
 
 <ul>
     <li>
+    Version 3.6.36 (released Dec 1, 2016):
+    <ul>
+        <li>Minor bug fixes and improvements.</li>
+    </ul>
+  </li>
+    <li>
     Version 3.6.35 (released Nov 2, 2016):
     <ul>
         <li>Minor bug fixes and improvements.</li>
