--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -757,8 +757,8 @@ This is the changelog for the
   <li>
   Version 2.1.2 (released April 28, 2008):
   Minor updates to the &ldquo;Annotation File Format Specification&rdquo; (<a
-    href="http://types.cs.washington.edu/annotation-file-utilities/annotation-file-format.pdf">PDF</a>, <a
-    href="http://types.cs.washington.edu/annotation-file-utilities/annotation-file-format.html">HTML</a>).
+    href="http://checkerframework.org/annotation-file-utilities/annotation-file-format.pdf">PDF</a>, <a
+    href="http://checkerframework.org/annotation-file-utilities/annotation-file-format.html">HTML</a>).
   </li>
 
   <li>
