Make URLs consistent with new release testing

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -8,7 +8,7 @@
 
 <p>
 This is the changelog for the
-<a href="annotation-file-utilities.html">Annotation File Utilities</a>.
+<a href="./">Annotation File Utilities</a>.
 </p>
 
 <ul>
@@ -757,8 +757,8 @@ This is the changelog for the
   <li>
   Version 2.1.2 (released April 28, 2008):
   Minor updates to the &ldquo;Annotation File Format Specification&rdquo; (<a
-    href="http://checkerframework.org/annotation-file-utilities/annotation-file-format.pdf">PDF</a>, <a
-    href="http://checkerframework.org/annotation-file-utilities/annotation-file-format.html">HTML</a>).
+    href="http://checker-framework.com/annotation-file-utilities/annotation-file-format.pdf">PDF</a>, <a
+    href="http://checker-framework.com/annotation-file-utilities/annotation-file-format.html">HTML</a>).
   </li>
 
   <li>
