--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -140,7 +140,7 @@ The current release is Annotation File Utilities version
 <ol>
 <li>
   Download
-  <a href="current/annotation-tools-3.6.37.zip"><!-- annotation-tools-zip-version -->annotation-tools-3.6.37.zip<!-- /annotation-tools-zip-version --></a>.
+  <a href="annotation-tools-3.6.37.zip"><!-- annotation-tools-zip-version -->annotation-tools-3.6.37.zip<!-- /annotation-tools-zip-version --></a>.
 </li>
 
 <li>
