Update change log

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -12,6 +12,15 @@ This is the changelog for the
 </p>
 
 <ul>
+  <li>
+    Version 3.6.38 (released Jan 20, 2017):
+    <ul>
+        <li> The Annotation File Utilities webpage has moved to
+	<a href="https://checkerframework.org/annotation-file-utilities/">https://checkerframework.org/annotation-file-utilities/</a>.
+             Old URLs should redirect to the new one, but please update your links
+             and let us know if any old links are broken rather than redirecting.</li>
+    </ul>
+  </li>
     <li>
     Version 3.6.37 (released Jan 3, 2017):
     <ul>
