--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -152,7 +152,7 @@ The current release is Annotation File Utilities version
   <pre><code>unzip annotation-tools-3.6.38.zip</code></pre>
 
   The <code>annotation-tools</code> directory must be a sibling of the <code>jsr308-langtools</code>
-  directory (available at <a href="http://types.cs.washington.edu/jsr308/">http://types.cs.washington.edu/jsr308/</a>).
+  directory (available at <a href="https://checkerframework.org/jsr308/">https://checkerframework.org/jsr308/</a>).
   Alternatively, Unix (including Linux and MacOS) users may set the <code>LANGTOOLS</code> environment variable to
   the location of the <code>jsr308-langtools</code> directory:
 
@@ -443,7 +443,7 @@ into source code.</p>
 <p>The <code>asmx</code> sub-project provides methods for reading and
 writing class files.  <code>asmx</code> is based on an old version
 (2.2.2) of the <a href="http://asm.ow2.org/">ASM Framework</a>. It has been modified to
-allow it to read and write <a href="http://types.cs.washington.edu/jsr308/specification/java-annotation-design.html">JSR 308</a>
+allow it to read and write <a href="https://checkerframework.org/jsr308/specification/java-annotation-design.html">JSR 308</a>
 annotations in bytecode.  However, it is far behind the current ASM
 version (5.0), which provides support for type annotations. We should
 discard the custom <code>asmx</code> in the Annotation File Utilities
