--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -774,8 +774,8 @@ This is the changelog for the
   Version 2.1.1 (released May 31, 2007):
   Added support for two new annotation target_types; consult the
   classfile specification (<a
-  href="http://types.cs.washington.edu/jsr308/specification/java-annotation-design.pdf">PDF</a>,
-  <a href="http://types.cs.washington.edu/jsr308/specification/java-annotation-design.html">HTML</a>).
+  href="https://checkerframework.org/jsr308/specification/java-annotation-design.pdf">PDF</a>,
+  <a href="https://checkerframework.org/jsr308/specification/java-annotation-design.html">HTML</a>).
   </li>
 
   <li>
