Update change log

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,12 @@ This is the changelog for the
 
 <ul>
   <li>
+    Version 3.6.39 (released March 1, 2017):
+    <ul>
+        <li>Minor bug fixes and improvements.</li>
+    </ul>
+  </li>
+  <li>
     Version 3.6.38 (released Jan 20, 2017):
     <ul>
         <li> The Annotation File Utilities webpage has moved to
