Update change log

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,14 @@ This is the changelog for the
 
 <ul>
   <li>
+    Version 3.6.45 (released September 29, 2017):
+    <ul>
+        <li>Fixes Issue
+        <a href="https://github.com/typetools/annotation-tools/issues/124">#124</a>.</li>
+    </ul>
+  </li>
+  <li>
+  <li>
     Version 3.6.45 (released September 5, 2017):
     <ul>
         <li>Minor bug fixes and improvements.</li>
