--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -12,6 +12,12 @@ This is the changelog for the
 </p>
 
 <ul>
+    <li>
+    Version 3.6.46 (released November 2, 2017):
+    <ul>
+        <li>Minor bug fixes and improvements.</li>
+    </ul>
+  </li>
   <li>
     Version 3.6.45 (released September 29, 2017):
     <ul>
