--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,15 @@ This is the changelog for the
 
 <ul>
     <li>
+    Version 3.6.48 (released December 1, 2017):
+    <ul>
+        <li>Fixes issues
+        <a href="https://github.com/typetools/annotation-tools/issues/144">#144</a>
+        and
+        <a href="https://github.com/typetools/annotation-tools/issues/145">#145</a>.</li>
+    </ul>
+  </li>
+    <li>
     Version 3.6.47 (released November 2, 2017):
     <ul>
         <li>Minor bug fixes and improvements.</li>
@@ -21,7 +30,7 @@ This is the changelog for the
   <li>
     Version 3.6.46 (released September 29, 2017):
     <ul>
-        <li>Fixes Issue
+        <li>Fixes issue
         <a href="https://github.com/typetools/annotation-tools/issues/124">#124</a>.</li>
     </ul>
   </li>
@@ -130,7 +139,7 @@ This is the changelog for the
     <ul>
       <li>
         extract-annotations no longer puts package annotations on non-existent class,
-        fixing Issue <a href="https://github.com/typetools/annotation-tools/issues/117">#117</a>.
+        fixing issue <a href="https://github.com/typetools/annotation-tools/issues/117">#117</a>.
       </li>
       <li>
         Closes issue <a href="https://github.com/typetools/annotation-tools/issues/120">#120</a>.
