--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,13 @@ This is the changelog for the
 
 <ul>
     <li>
+    Version 3.6.48 (released December 1, 2017):
+    <ul>
+        <li>Moved scene-lib classes into package <code>scenelib</code> (fixes issue
+        <a href="https://github.com/typetools/annotation-tools/issues/121">#121</a>).</li>
+    </ul>
+  </li>
+    <li>
     Version 3.6.47 (released November 2, 2017):
     <ul>
         <li>Minor bug fixes and improvements.</li>
