--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,12 @@ This is the changelog for the
 
 <ul>
     <li>
+    Version 3.6.49 (released January 2, 2018):
+    <ul>
+        <li>Minor bug fixes and improvements.</li>
+    </ul>
+    </li>
+    <li>
     Version 3.6.48 (released December 1, 2017):
     <ul>
         <li>Moved scene-lib classes into package <code>scenelib</code> (fixes issue
