--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -109,7 +109,7 @@ to read and write annotation files.
 </ul>
 
 <p>
-A diagram showing the interactions betweeen these tools is below.
+A diagram showing the interactions between these tools is below.
 </p>
 
 <div>
@@ -144,7 +144,7 @@ The current release is Annotation File Utilities version
 </li>
 
 <li>
-  Creade a directory named
+  Create a directory named
   <code>annotation-tools</code> by
   unpacking the distribution zipfile (a standard place to do this is in a
   directory <code>~/jsr308/</code>):
