--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,15 @@ This is the changelog for the
 
 <ul>
     <li>
+    Version 3.6.52 (released April 2, 2017):
+    <ul>
+        <li>Fixed issues
+        <a href="https://github.com/typetools/annotation-tools/issues/155">#155</a>
+        and
+        <a href="https://github.com/typetools/annotation-tools/issues/156">#156</a>.</li>
+    </ul>
+  </li>
+    <li>
     Version 3.6.51 (released March 1, 2018):
     <ul>
         <li>Minor bug fixes and improvements.</li>
