--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -451,7 +451,7 @@ into source code.</p>
 
 <p>The <code>asmx</code> sub-project provides methods for reading and
 writing class files.  <code>asmx</code> is based on an old version
-(2.2.2) of the <a href="http://asm.ow2.org/">ASM Framework</a>. It has been modified to
+(2.2.2) of the <a href="https://asm.ow2.org/">ASM Framework</a>. It has been modified to
 allow it to read and write <a href="https://checkerframework.org/jsr308/specification/java-annotation-design.html">JSR 308</a>
 annotations in bytecode.  However, it is far behind the current ASM
 version (5.0), which provides support for type annotations. We should
