--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,12 @@ This is the changelog for the
 
 <ul>
     <li>
+    Version 3.6.55 (released July 2, 2018):
+    <ul>
+        <li>Minor bug fixes and improvements.</li>
+    </ul>
+    </li>
+    <li>
     Version 3.6.54 (released June 1, 2018):
     <ul>
         <li>Minor bug fixes and improvements.</li>
