--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,17 @@ This is the changelog for the
 
 <ul>
     <li>
+    Version 3.7.0 (released ??, 2018):
+    <ul>
+        <li>Requires a Java 8 JVM to execute.</li>
+        <li><code>annotation-file-utilities.jar</code> is now a skinny jar.
+            <code>annotation-file-utilities-all.jar</code> is a fat jar.
+        </li>
+        <li>Implementation detail: ASMX now uses package <code>org.objectweb.asmx</code>,
+	  rather than <code>org.objectweb.asm</code>.
+	</li>
+    </ul>
+    <li>
     Version 3.6.55 (released July 2, 2018):
     <ul>
         <li>Minor bug fixes and improvements.</li>
