Don't use jsr308-langtools repository

--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -146,17 +146,12 @@ The current release is Annotation File Utilities version
 <li>
   Create a directory named
   <code>annotation-tools</code> by
-  unpacking the distribution zipfile (a standard place to do this is in a
-  directory <code>~/jsr308/</code>):
+  unpacking the distribution zipfile.
+  (You will typically make <code>annotation-tools/</code> a sibling of
+  <code>checker-framework/</code>.)
 
   <pre><code>unzip annotation-tools-3.6.56.zip</code></pre>
 
-  The <code>annotation-tools</code> directory must be a sibling of the <code>jsr308-langtools</code>
-  directory (available at <a href="https://checkerframework.org/jsr308/">https://checkerframework.org/jsr308/</a>).
-  Alternatively, Unix (including Linux and MacOS) users may set the <code>LANGTOOLS</code> environment variable to
-  the location of the <code>jsr308-langtools</code> directory:
-
-  <pre><code>export LANGTOOLS=<em>/path/to</em>/jsr308-langtools</code></pre>
 </li>
 
 <li>
@@ -452,8 +447,9 @@ into source code.</p>
 <p>The <code>asmx</code> sub-project provides methods for reading and
 writing class files.  <code>asmx</code> is based on an old version
 (2.2.2) of the <a href="https://asm.ow2.io/">ASM Framework</a>. It has been modified to
-allow it to read and write <a href="https://checkerframework.org/jsr308/specification/java-annotation-design.html">JSR 308</a>
-annotations in bytecode.  However, it is far behind the current ASM
+allow it to read and
+write <a href="https://checkerframework.org/jsr308/specification/java-annotation-design.html">type
+annotations</a> in \<.class> files.  However, it is far behind the current ASM
 version (5.0), which provides support for type annotations. We should
 discard the custom <code>asmx</code> in the Annotation File Utilities
 and adapt the Annotation File Utilities to use the official, supported
