Update changelog for release.

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,12 @@ This is the changelog for the
 
 <ul>
     <li>
+    Version 3.8.1 (released October 1, 2018):
+    <ul>
+        <li>Minor bug fixes and improvements.</li>
+    </ul>
+    </li>
+    <li>
     Version 3.8.0 (released August 30, 2018):
     <ul>
         <li>Requires a Java 8 JVM to execute.</li>
