Update changelog for version 3.8.2

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,12 @@ This is the changelog for the
 
 <ul>
     <li>
+    Version 3.8.2 (released November 4, 2018):
+    <ul>
+        <li>Minor bug fixes and improvements.</li>
+    </ul>
+    </li>
+    <li>
     Version 3.8.1 (released October 3, 2018):
     <ul>
         <li>Minor bug fixes and improvements.</li>
