Clarify that insert-annotations[-to-source] modifies its target [ci skip]

--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -101,15 +101,16 @@ to read and write annotation files.
 
 <ul>
   <li> <a href="#insert-annotations"><code>insert-annotations</code></a> reads annotations from an annotation file
-       and inserts them into a class file</li>
+       and inserts them into an existing class file</li>
   <li> <a href="#extract-annotations"><code>extract-annotations</code></a> reads annotations from a class file
-       and writes them out to an annotation file</li>
+       and writes them out to a new annotation file</li>
   <li> <a href="#insert-annotations-to-source"><code>insert-annotations-to-source</code></a> reads annotations from an
-       annotation file and inserts them into a Java source file</li>
+       annotation file and inserts them into an existing Java source file</li>
 </ul>
 
 <p>
-A diagram showing the interactions between these tools is below.
+The diagram below shows how each tool moves annotations from one file
+format to another.
 </p>
 
 <div>
