--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,13 @@ This is the changelog for the
 
 <ul>
     <li>
+    Version 3.8.4 (released February 2, 2019):
+    <ul>
+        <li>Fix bug in which imports were not added for annotations on constructor invocations.</li>
+        <li>Documentation clarifies that insert-annotations[-to-source] modifies its target.</li>
+    </ul>
+    </li>
+    <li>
     Version 3.8.3 (released December 5, 2018):
     <ul>
         <li>Minor bug fixes and improvements.</li>
