Changelog for version 3.8.5

--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,12 @@ This is the changelog for the
 
 <ul>
     <li>
+    Version 3.8.5 (released March 1, 2019):
+    <ul>
+        <li>Minor bug fixes and improvements.</li>
+    </ul>
+    </li>
+    <li>
     Version 3.8.4 (released February 3, 2019):
     <ul>
         <li>Fix bug in which imports were not added for annotations on constructor invocations.</li>
