--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,13 @@ This is the changelog for the
 
 <ul>
     <li>
+    Version 3.8.7 (released May 1, 2019):
+    <ul>
+        <li>Fixed issues
+        <a href="https://github.com/typetools/annotation-tools/issues/194">#194</a>.
+    </ul>
+    </li>
+    <li>
     Version 3.8.6 (released April 3, 2019):
     <ul>
         <li>Minor bug fixes and improvements.</li>
