--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -15,7 +15,7 @@ This is the changelog for the
     <li>
     Version 3.8.7 (released May 1, 2019):
     <ul>
-        <li>Fixed issues
+        <li>Fixed issue
         <a href="https://github.com/typetools/annotation-tools/issues/194">#194</a>.
     </ul>
     </li>
