-cp and -classpath command-line options for extract-annotations

--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -296,6 +296,14 @@ Alternately, you can specify a classfile directly:
 Multiple classes or classfiles can be specified on a single command line; if the
 program exits normally, the results are the same as if the program was
 run once for each class in sequence.
+</p>
+
+<p>
+The <code>-cp</code> and <code>-classpath</code> command-line options set
+the classpath to use to look up annotations.
+</p>
+
+<p>
 Run:
 </p>
 
