--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,12 @@ This is the changelog for the
 
 <ul>
     <li>
+    Version 3.8.8 (released June 3, 2019):
+    <ul>
+        <li>Added command-line arguments <code>-cp</code>
+        and <code>-classpath</code> to <code>extract-annotations</code>.
+    </ul>
+    <li>
     Version 3.8.7 (released May 1, 2019):
     <ul>
         <li>Fixed issue
