--- a/annotation-file-utilities/annotation-file-utilities.html
+++ b/annotation-file-utilities/annotation-file-utilities.html
@@ -408,7 +408,7 @@ The command-line options are as follows:
  <p>
 
  To preserve changes when using the --in-place option, first remove the
- backup files.  Or, use the <tt>-d .</tt> option, which makes (and
+ backup files.  Or, use the <code>-d .</code> option, which makes (and
  reads) no backup, instead of --in-place. [default false]
             <li id="option:abbreviate"><b>-a</b> <b>--abbreviate=</b><i>boolean</i>.
              Abbreviate annotation names [default true]
@@ -461,7 +461,7 @@ writing class files.  <code>asmx</code> is based on an old version
 (2.2.2) of the <a href="https://asm.ow2.io/">ASM Framework</a>. It has been modified to
 allow it to read and
 write <a href="https://checkerframework.org/jsr308/specification/java-annotation-design.html">type
-annotations</a> in \<.class> files.  However, it is far behind the current ASM
+annotations</a> in <code>.class</code> files.  However, it is far behind the current ASM
 version (5.0), which provides support for type annotations. We should
 discard the custom <code>asmx</code> in the Annotation File Utilities
 and adapt the Annotation File Utilities to use the official, supported
