--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -17,6 +17,10 @@ This is the changelog for the
     <ul>
         <li>Added command-line arguments <code>-cp</code>
         and <code>-classpath</code> to <code>extract-annotations</code>.
+        <li>Added command-line argument <code>--verbose</code> to
+        <code>extract-annotations</code> and <code>insert-annotations</code>.
+        <li>Removed command-line argument <code>-v</code> from
+        <code>extract-annotations</code>; use <code>--version</code> instead.
     </ul>
     <li>
     Version 3.8.7 (released May 1, 2019):
