--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -23,6 +23,9 @@ This is the changelog for the
         <code>extract-annotations</code>; use <code>--version</code> instead.
         <li><code>insert-annotations-to-source</code> does a better check
 	for existing annotations,  to avoid inserting a duplicate annotation.
+       <li> Fixed issues
+        <a href="https://github.com/typetools/annotation-tools/issues/200">#200</a> and
+        <a href="https://github.com/typetools/annotation-tools/issues/201">#201</a>.
     </ul>
     <li>
     Version 3.8.7 (released May 1, 2019):
