--- a/annotation-file-utilities/changelog.html
+++ b/annotation-file-utilities/changelog.html
@@ -13,6 +13,15 @@ This is the changelog for the
 
 <ul>
     <li>
+    Version 3.8.9 (released July 3, 2019):
+    <ul>
+        <li>Minor bug fixes and improvements.</li>
+       <li> Fixed issues
+        <a href="https://github.com/typetools/annotation-tools/issues/216">#216</a> and
+        <a href="https://github.com/typetools/annotation-tools/issues/220">#220</a>.
+    </ul>
+    </li>
+    <li>
     Version 3.8.8 (released June 3, 2019):
     <ul>
         <li>Added command-line arguments <code>-cp</code>
